# rochedb

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  config.nims  koutendb.nimble  orbeliasdb.nimble  rochedb.nimble
docs/: _config.yml  audit-remediation.md  benchmark-comparison.md  cli-reference.md  cloud-operations.md  config-reference.md  data-locality.md  data-migration.md  development-workflow.md  driver-installation.md  effect-validation.md  faiss-versioning.md  fault-tolerance-roadmap.md  github-release-v0.1.0.md  github-release-v0.2.0.md  github-release-v0.3.0.md  github-release-v0.4.0.md  github-release-v0.4.1.md  github-release-v0.5.0.md  github-release-v0.5.1.md  github-release-v0.6.0.md  github-release-v0.7.0.md  github-release-v0.8.0.md  github-release-v0.8.1.md  github-release-v0.9.0.md  index.md  installation.md  koutendb-bench.md  koutendb-concept.md  koutendb-design.md  koutendb-driver-roadmap.md  koutendb-halo-capture.md  koutendb-shelfer-integration.md  koutendb-status.de.md  koutendb-status.fr.md  koutendb-status.ja.md  koutendb-status.ko.md  koutendb-status.md  koutendb-status.zh.md  nosql-positioning.md  (+45 more)
drivers/python/: README.md  pyproject.toml
drivers/python/rochedb/: __init__.py  client.py
drivers/python/tests/: test_driver.py
examples/: ai_rag_case_study.nim  ai_rag_case_study.sh  cabi_contract.c  cabi_tls_contract.c  cbench.c  cluster_demo.sh  demo.c  effect_validation_demo.nim  effect_validation_demo.sh  effect_validation_matrix.sh  jmeter_load_smoke.sh  local_remote_galaxy_demo.nim  (+29 more)
(+163 files in other folders)
